--- a/packages/angular-app/src/app/app.component.html
+++ b/packages/angular-app/src/app/app.component.html
@@ -353,7 +353,7 @@
   <!-- Resources -->
   <h2>Resources</h2>
 
-  <mars-button>Hola soy un webComponent!</mars-button>
+  <my-search>Hola soy un webComponent!</my-search>
   <p>Here are some links to help you get started:</p>
 
   <div class="card-container">
