--- a/packages/angular-app/src/app/app.component.html
+++ b/packages/angular-app/src/app/app.component.html
@@ -353,7 +353,7 @@
   <!-- Resources -->
   <h2>Resources</h2>
 
-  <my-search>Hola soy un webComponent!</my-search>
+  <my-search label="soy un label" button="Hola soy un webComponent!"></my-search>
   <p>Here are some links to help you get started:</p>
 
   <div class="card-container">
